# Josh-creator-scene-skill

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
docs/: architecture.md
examples/josh-ai-tech/: README.md  references.template.json
references/: execution-deliverable.md  mockup-prompting.md  reference-research.md  set-design.md  spatial-reading.md
src/creator_scene_director/: __init__.py  cli.py  constraints.py  models.py  openai_images.py  pipeline.py  prompting.py  providers.py
tests/: test_constraints.py  test_pipeline.py
