[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "creator-scene-director"
version = "0.1.0"
description = "Turn one real room photo into three achievable A-roll lighting and set directions, then an executable setup plan."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Josh Zhao" }]
keywords = ["creator", "a-roll", "lighting", "set-design", "image-editing", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=2.0.0"]
dev = ["pytest>=8.0", "ruff>=0.9"]

[project.scripts]
creator-scene-director = "creator_scene_director.cli:main"

[project.urls]
Homepage = "https://github.com/joshzhao-ai/creator-scene-director-sdk"
Repository = "https://github.com/joshzhao-ai/creator-scene-director-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/creator_scene_director"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

