[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "josh-creator-scene-skill"
version = "0.2.1"
description = "One real room photo to a talking-head scene preview and an executable camera, lighting and set plan."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Josh Zhao" }]
keywords = ["creator", "a-roll", "lighting", "set-design", "image-editing", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=2.0.0"]
dev = ["pytest>=8.0", "ruff>=0.9"]

[project.scripts]
josh-creator-scene = "creator_scene_director.cli:main"
creator-scene-director = "creator_scene_director.cli:main"

[project.urls]
Homepage = "https://github.com/joshzhao-ai/Josh-creator-scene-skill"
Repository = "https://github.com/joshzhao-ai/Josh-creator-scene-skill"

[tool.hatch.build.targets.wheel]
packages = ["src/creator_scene_director"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
